--- a/trabalho-main/src/pages/contato.html
+++ b/trabalho-main/src/pages/contato.html
@@ -24,7 +24,7 @@
   </main>
   <a href="https://www.instagram.com/concessionariasturbo?igsh=MTVzajZ6Mmt0ZmNzNA==">Instagram</a>
   <br>
-  <a href="mailto:caua03771@gmail.com" class="letradoemail">entre em contato por email</a>
+  <a href="https://mail.google.com/mail/u/0/#sent?compose=CllgCJTNqGCPwckFDKvRgSjHRqktJHTTMnrnGhxhgrZxPJpMNZLvqpXPTcZcvfvTdKlPSMHMqLB" class="letradoemail">entre em contato por email</a>
   <br>
   <p>Utilizamos apenas WhatsApp:<a href="tel:085979867320">(085)979867320</a></p>
   <a href="whatsapp-btn"><input type="button"> entre em contato</a>
