--- a/trabalho/src/pages/carros.html
+++ b/trabalho/src/pages/carros.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=], initial-scale=1.0">
     <title>Concessionária Texmex | Carros de Qualidade</title>
     <link rel="stylesheet" href="../../src/css/style.css">
+    <script src="../js/script.js"></script>
 </head>
 <body>   
       <header>
     <nav>
-      <img src="../../src/images/concessionaria t (3).png" alt=" imagem da concessioraria" style="height: 120px; width: 190px;">
+      <img src="../images/concessionaria t (3).png" alt=" imagem da concessioraria" style="height: 120px; width: 190px;">
       <ul>
     <li><a href="../../index.html">Início</a></li>
-    <li><a href="../../src/pages/contato.html">Contato</a></li>
-    <li><a href="../../src/pages/carros.html">Carros</a></li>
+    <li><a href="contato.html">Contato</a></li>
+    <li><a href="carros.html">Carros</a></li>
       </ul>
     </nav>
   </header>
@@ -23,7 +24,7 @@
     <p>Na <strong>Texmex</strong>, você encontra os melhores veículos, com garantia e atendimento de excelência.</p>
   </main>
   <div class="carros">
-  <img src="../../src/images/NFSUG1_Acura_IntegraTypeR_Stock_F.webp" alt="imagem do carro integra type r" style="height: 500px; width: 550px;">
+  <img src="../images/NFSUG1_Acura_IntegraTypeR_Stock_F.webp" alt="imagem do carro integra type r" style="height: 500px; width: 550px;">
   <h4>Acura Integra Type R (DC2) 2001</h4>
   <br>
   <p>
@@ -44,7 +45,7 @@
   <h4>Preço: R$ 101.650</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Acura_RSX_Stock_F.webp" alt="imagem do carro rsx" style="height: 500px; width: 550px;">
+  <img src="../images/NFSUG1_Acura_RSX_Stock_F.webp" alt="imagem do carro rsx" style="height: 500px; width: 550px;">
   <h4>Acura RSX Tipo-S 2003 (DC5)</h4>
   <br>
   <p>
@@ -66,7 +67,7 @@
   <h4>Preço: R$ 101.650</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Dodge_Neon_Stock_F.webp" alt="imagem do carro neon" style="height: 500px; width: 550px;">
+  <img src="../images/NFSUG1_Dodge_Neon_Stock_F.webp" alt="imagem do carro neon" style="height: 500px; width: 550px;">
   <h4>Dodge Neon 2.0i 1999 (1ª Geração)</h4>
   <br>
   <p>
@@ -86,7 +87,7 @@
   <h4>Preço: R$ 42.800</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Ford_Focus_Stock_F.webp" alt="imagem do carro focus" style="height: 500px; width: 550px">
+  <img src="../images/NFSUG1_Ford_Focus_Stock_F.webp" alt="imagem do carro focus" style="height: 500px; width: 550px">
   <h4>Ford Focus ZX3 2003 (1ª Geração)</h4>
   <br>
   <p>
@@ -108,7 +109,7 @@
   <h4>Preço: R$ 48.150</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Honda_Civic_Stock_F.webp" alt="imagem do carro civic" style="height: 500px; width: 550px;">
+  <img src="../images/NFSUG1_Honda_Civic_Stock_F.webp" alt="imagem do carro civic" style="height: 500px; width: 550px;">
   <h4>Honda Civic Si 2000 (EM1)</h4>
   <br>
   <p>
@@ -130,7 +131,7 @@
   <h4>Preço: R$ 53.500</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Honda_S2000_Stock_F.webp" alt="imagem do carro s2000" style="height: 500px; width: 550px;">
+  <img src="../images/NFSUG1_Honda_S2000_Stock_F.webp" alt="imagem do carro s2000" style="height: 500px; width: 550px;">
   <h4>Honda S2000 2003 (AP1)</h4>
   <br>
   <p>
@@ -156,7 +157,7 @@
   <h4>Preço: R$ 149.800</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Hyundai_TiburonGT_Stock_F.webp" alt="imagem do carro tiburon gt" style="height: 500px; width: 550px;">
+  <img src="../images/NFSUG1_Hyundai_TiburonGT_Stock_F.webp" alt="imagem do carro tiburon gt" style="height: 500px; width: 550px;">
   <h4>Hyundai Tiburon GT 2003 (GK)</h4>
   <br>
   <p>
@@ -177,7 +178,7 @@
   <h4>Preço: R$ 45.475</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Mazda_MX5_Stock_F.webp" alt="imagem do carro mx5" style="height: 500px; width: 550px;">
+  <img src="../images/NFSUG1_Mazda_MX5_Stock_F.webp" alt="imagem do carro mx5" style="height: 500px; width: 550px;">
   <h4>Mazda MX-5 1999 (NB)</h4>
   <br>
   <p>
@@ -200,7 +201,7 @@
   <h4>Preço: R$ 50.825</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Mazda_RX7_Stock_F.webp" alt="imagem do carro rx7" style="height: 500px; width: 550px;">
+  <img src="../images/NFSUG1_Mazda_RX7_Stock_F.webp" alt="imagem do carro rx7" style="height: 500px; width: 550px;">
   <h4>Mazda RX-7 (FD3S) 1995 (Série 6)</h4>
   <br>
   <p>
@@ -226,7 +227,7 @@
   <h4>Preço: R$ 160.500</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Mitsubishi_Eclipse_Stock_F.webp" alt="imagem do carro eclipse" style="height: 500px; width: 550px;">
+  <img src="../images/NFSUG1_Mitsubishi_Eclipse_Stock_F.webp" alt="imagem do carro eclipse" style="height: 500px; width: 550px;">
   <h4>Mitsubishi Eclipse GSX 1999 (D33A)</h4>
   <br>
   <p>
@@ -255,7 +256,7 @@
   <h4>Preço: R$ 109.675</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Mitsubishi_Lancer_Stock_F.webp" alt="imagem do carro lancer" style="height: 500px; width: 550px;">
+  <img src="../images/NFSUG1_Mitsubishi_Lancer_Stock_F.webp" alt="imagem do carro lancer" style="height: 500px; width: 550px;">
   <h4>Mitsubishi Lancer ES 2003 (CT9A)</h4>
   <br>
   <p>
@@ -274,7 +275,7 @@
   <h4>Preço: R$ 56.175</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Nissan_240SX_Stock_F.webp" alt="imagem do carro 240sx" style="height: 500px; width: 550px;">
+  <img src="../images/NFSUG1_Nissan_240SX_Stock_F.webp" alt="imagem do carro 240sx" style="height: 500px; width: 550px;">
   <h4>Nissan 240SX SE (S13) 1992</h4>
   <br>
   <p>
@@ -296,7 +297,7 @@
   <h4>Preço: R$ 96.300</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Nissan_350Z_Stock_F.webp" alt="imagem do carro 350z" style="height: 500px; width: 550px;">
+  <img src="../images/NFSUG1_Nissan_350Z_Stock_F.webp" alt="imagem do carro 350z" style="height: 500px; width: 550px;">
   <h4>Nissan 350Z Touring 2003 (Z33)</h4>
   <br>
   <p>
@@ -317,7 +318,7 @@
   <h4>Preço: R$ 187.250</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Nissan_SentraSERSpecV_Stock_F.webp" alt="imagem do carro sentra se-r spec v" style="height: 500px; width: 550px;">
+  <img src="../images/NFSUG1_Nissan_SentraSERSpecV_Stock_F.webp" alt="imagem do carro sentra se-r spec v" style="height: 500px; width: 550px;">
   <h4>2003 Nissan Sentra SE-R Spec V (B15)</h4>
   <br>
   <p>
@@ -338,7 +339,7 @@
   <h4>Preço: R$ 107.000</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Volkswagen_GolfGTI_Stock_F.webp" alt="imagem do carro golf gti" style="height: 500px; width: 550px;">
+  <img src="../images/NFSUG1_Volkswagen_GolfGTI_Stock_F.webp" alt="imagem do carro golf gti" style="height: 500px; width: 550px;">
   <h4>2003 Volkswagen Golf GTI 2.0L (MK4)</h4>
   <br>
   <p>
