--- a/trabalho/src/pages/contato.html
+++ b/trabalho/src/pages/contato.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Concessionária Texmex | Carros de Qualidade</title>
     <link rel="stylesheet" href="../../src/css/style.css">
+    <script src="../js/script.js"></script>
 </head>
 <body>
       <header>
     <nav>
-      <img src="../../src/images/concessionaria t (3).png" alt=" imagem da concessioraria" style="height: 120px; width: 190px;">
+      <img src="../images/ t (3).png" alt=" imagem da concessioraria" style="height: 120px; width: 190px;">
       <ul>
     <li><a href="../../index.html">Início</a></li>
-    <li><a href="../../src/pages/contato.html">Contato</a></li>
-    <li><a href="../../src/pages/carros.html">Carros</a></li>
+    <li><a href="contato.html">Contato</a></li>
+    <li><a href="carros.html">Carros</a></li>
       </ul>
     </nav>
   </header>
@@ -24,7 +25,7 @@
   </main>
   <a href="https://www.instagram.com/concessionariasturbo?igsh=MTVzajZ6Mmt0ZmNzNA==">Instagram</a>
   <br>
-  <a href="mailto:caua03771@gmail.com">caua03771@gmail.com</a>
+  <a href="https://mail.google.com/mail/u/0/#sent?compose=CllgCJNsLvVZMfFVCzzNbRFMmkngKGNhdqlLCgFDMpQNpVRqQCwRnkMmBJwWMcmCDRrDSLlsdxV">caua03771@gmail.com</a>
   <br>
   <p>Utilizamos apenas WhatsApp:<a href="https://wa.me/5585999508769" target="_blank">(85)9 9950-8769</a></p>
     <a href="https://mail.google.com/mail/u/0/#sent?compose=CllgCJTNqGCPwckFDKvRgSjHRqktJHTTMnrnGhxhgrZxPJpMNZLvqpXPTcZcvfvTdKlPSMHMqLB" class="letradoemail">entre em contato por email</a>
