--- a/trabalho/index.html
+++ b/trabalho/index.html
@@ -11,11 +11,11 @@
 <body>
   <header>
     <nav>
-      <img src="index.html/../src/images/concessionaria t (3).png" alt=" imagem da concessioraria" style="height: 120px; width: 190px;">
+      <img src="src\images\concessionaria t (3).png" alt=" imagem da concessioraria" style="height: 120px; width: 190px;">
       <ul>
     <li><a href="index.html">Início</a></li>
-    <li><a href="src/pages/contato.html">Contato</a></li>
-    <li><a href="src/pages/carros.html">Carros</a></li>
+    <li><a href="../trabalho/src/pages/contato.html">Contato</a></li>
+    <li><a href="../trabalho/src/pages/carros.html">Carros</a></li>
       </ul>
     </nav>
   </header>
