--- a/trabalho/src/pages/contato.html
+++ b/trabalho/src/pages/contato.html
@@ -10,7 +10,7 @@
 <body>
       <header>
     <nav>
-      <img src="../images/ t (3).png" alt=" imagem da concessioraria" style="height: 120px; width: 190px;">
+      <img src="../images/concessionaria t (3).png" alt=" imagem da concessioraria" style="height: 120px; width: 190px;">
       <ul>
     <li><a href="../../index.html">Início</a></li>
     <li><a href="contato.html">Contato</a></li>
@@ -23,7 +23,11 @@
     <h2>Qualidade, Confiança e Preços Acessíveis</h2>
     <p>Na <strong>Texmex</strong>, você encontra os melhores veículos, com garantia e atendimento de excelência.</p>
   </main>
-  <a href="https://www.instagram.com/concessionariasturbo?igsh=MTVzajZ6Mmt0ZmNzNA==">Instagram</a>
+  <a href="https://www.instagram.com/concessionariasturbo/?igsh=MTVzajZ6Mmt0ZmNzNA%3D%3D#"target="_blank">
+    <img src="../images/Instagram-Logo.png"
+    alt="instagram"
+    width="50">
+  </a>
   <br>
   <a href="https://mail.google.com/mail/u/0/#sent?compose=CllgCJNsLvVZMfFVCzzNbRFMmkngKGNhdqlLCgFDMpQNpVRqQCwRnkMmBJwWMcmCDRrDSLlsdxV">caua03771@gmail.com</a>
   <br>
