--- a/trabalho/src/pages/carros.html
+++ b/trabalho/src/pages/carros.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=], initial-scale=1.0">
+    <link rel="shortcut icon" href="../../src/images/Icons-Land-Transporter-Car-Left-Red.ico" type="image/x-icon">
     <title>Concessionária Texmex | Carros de Qualidade</title>
     <link rel="stylesheet" href="../../src/css/style.css">
-    <script src="../js/script.js"></script>
 </head>
 <body>   
       <header>
     <nav>
-      <img src="../images/concessionaria t (3).png" alt=" imagem da concessioraria" style="height: 120px; width: 190px;">
+      <img src="../../src/images/concessionaria t (3).png" alt=" imagem da concessioraria" style="height: 120px; width: 190px;">
       <ul>
     <li><a href="../../index.html">Início</a></li>
-    <li><a href="contato.html">Contato</a></li>
-    <li><a href="carros.html">Carros</a></li>
+    <li><a href="../../src/pages/contato.html">Contato</a></li>
+    <li><a href="../../src/pages/carros.html">Carros</a></li>
       </ul>
     </nav>
   </header>
@@ -24,7 +24,7 @@
     <p>Na <strong>Texmex</strong>, você encontra os melhores veículos, com garantia e atendimento de excelência.</p>
   </main>
   <div class="carros">
-  <img src="../images/NFSUG1_Acura_IntegraTypeR_Stock_F.webp" alt="imagem do carro integra type r" style="height: 500px; width: 550px;">
+  <img src="../../src/images/NFSUG1_Acura_IntegraTypeR_Stock_F.webp" alt="imagem do carro integra type r" style="height: 500px; width: 550px;">
   <h4>Acura Integra Type R (DC2) 2001</h4>
   <br>
   <p>
@@ -45,7 +45,7 @@
   <h4>Preço: R$ 101.650</h4>
   <hr>
   <br>
-  <img src="../images/NFSUG1_Acura_RSX_Stock_F.webp" alt="imagem do carro rsx" style="height: 500px; width: 550px;">
+  <img src="../../src/images/NFSUG1_Acura_RSX_Stock_F.webp" alt="imagem do carro rsx" style="height: 500px; width: 550px;">
   <h4>Acura RSX Tipo-S 2003 (DC5)</h4>
   <br>
   <p>
@@ -67,7 +67,7 @@
   <h4>Preço: R$ 101.650</h4>
   <hr>
   <br>
-  <img src="../images/NFSUG1_Dodge_Neon_Stock_F.webp" alt="imagem do carro neon" style="height: 500px; width: 550px;">
+  <img src="../../src/images/NFSUG1_Dodge_Neon_Stock_F.webp" alt="imagem do carro neon" style="height: 500px; width: 550px;">
   <h4>Dodge Neon 2.0i 1999 (1ª Geração)</h4>
   <br>
   <p>
@@ -87,7 +87,7 @@
   <h4>Preço: R$ 42.800</h4>
   <hr>
   <br>
-  <img src="../images/NFSUG1_Ford_Focus_Stock_F.webp" alt="imagem do carro focus" style="height: 500px; width: 550px">
+  <img src="../../src/images/NFSUG1_Ford_Focus_Stock_F.webp" alt="imagem do carro focus" style="height: 500px; width: 550px">
   <h4>Ford Focus ZX3 2003 (1ª Geração)</h4>
   <br>
   <p>
@@ -109,7 +109,7 @@
   <h4>Preço: R$ 48.150</h4>
   <hr>
   <br>
-  <img src="../images/NFSUG1_Honda_Civic_Stock_F.webp" alt="imagem do carro civic" style="height: 500px; width: 550px;">
+  <img src="../../src/images/NFSUG1_Honda_Civic_Stock_F.webp" alt="imagem do carro civic" style="height: 500px; width: 550px;">
   <h4>Honda Civic Si 2000 (EM1)</h4>
   <br>
   <p>
@@ -131,7 +131,7 @@
   <h4>Preço: R$ 53.500</h4>
   <hr>
   <br>
-  <img src="../images/NFSUG1_Honda_S2000_Stock_F.webp" alt="imagem do carro s2000" style="height: 500px; width: 550px;">
+  <img src="../../src/images/NFSUG1_Honda_S2000_Stock_F.webp" alt="imagem do carro s2000" style="height: 500px; width: 550px;">
   <h4>Honda S2000 2003 (AP1)</h4>
   <br>
   <p>
@@ -157,7 +157,7 @@
   <h4>Preço: R$ 149.800</h4>
   <hr>
   <br>
-  <img src="../images/NFSUG1_Hyundai_TiburonGT_Stock_F.webp" alt="imagem do carro tiburon gt" style="height: 500px; width: 550px;">
+  <img src="../../src/images/NFSUG1_Hyundai_TiburonGT_Stock_F.webp" alt="imagem do carro tiburon gt" style="height: 500px; width: 550px;">
   <h4>Hyundai Tiburon GT 2003 (GK)</h4>
   <br>
   <p>
@@ -178,7 +178,7 @@
   <h4>Preço: R$ 45.475</h4>
   <hr>
   <br>
-  <img src="../images/NFSUG1_Mazda_MX5_Stock_F.webp" alt="imagem do carro mx5" style="height: 500px; width: 550px;">
+  <img src="../../src/images/NFSUG1_Mazda_MX5_Stock_F.webp" alt="imagem do carro mx5" style="height: 500px; width: 550px;">
   <h4>Mazda MX-5 1999 (NB)</h4>
   <br>
   <p>
@@ -201,7 +201,7 @@
   <h4>Preço: R$ 50.825</h4>
   <hr>
   <br>
-  <img src="../images/NFSUG1_Mazda_RX7_Stock_F.webp" alt="imagem do carro rx7" style="height: 500px; width: 550px;">
+  <img src="../../src/images/NFSUG1_Mazda_RX7_Stock_F.webp" alt="imagem do carro rx7" style="height: 500px; width: 550px;">
   <h4>Mazda RX-7 (FD3S) 1995 (Série 6)</h4>
   <br>
   <p>
@@ -227,7 +227,7 @@
   <h4>Preço: R$ 160.500</h4>
   <hr>
   <br>
-  <img src="../images/NFSUG1_Mitsubishi_Eclipse_Stock_F.webp" alt="imagem do carro eclipse" style="height: 500px; width: 550px;">
+  <img src="../../src/images/NFSUG1_Mitsubishi_Eclipse_Stock_F.webp" alt="imagem do carro eclipse" style="height: 500px; width: 550px;">
   <h4>Mitsubishi Eclipse GSX 1999 (D33A)</h4>
   <br>
   <p>
@@ -256,7 +256,7 @@
   <h4>Preço: R$ 109.675</h4>
   <hr>
   <br>
-  <img src="../images/NFSUG1_Mitsubishi_Lancer_Stock_F.webp" alt="imagem do carro lancer" style="height: 500px; width: 550px;">
+  <img src="../../src/images/NFSUG1_Mitsubishi_Lancer_Stock_F.webp" alt="imagem do carro lancer" style="height: 500px; width: 550px;">
   <h4>Mitsubishi Lancer ES 2003 (CT9A)</h4>
   <br>
   <p>
@@ -275,7 +275,7 @@
   <h4>Preço: R$ 56.175</h4>
   <hr>
   <br>
-  <img src="../images/NFSUG1_Nissan_240SX_Stock_F.webp" alt="imagem do carro 240sx" style="height: 500px; width: 550px;">
+  <img src="../../src/images/NFSUG1_Nissan_240SX_Stock_F.webp" alt="imagem do carro 240sx" style="height: 500px; width: 550px;">
   <h4>Nissan 240SX SE (S13) 1992</h4>
   <br>
   <p>
@@ -297,7 +297,7 @@
   <h4>Preço: R$ 96.300</h4>
   <hr>
   <br>
-  <img src="../images/NFSUG1_Nissan_350Z_Stock_F.webp" alt="imagem do carro 350z" style="height: 500px; width: 550px;">
+  <img src="../../src/images/NFSUG1_Nissan_350Z_Stock_F.webp" alt="imagem do carro 350z" style="height: 500px; width: 550px;">
   <h4>Nissan 350Z Touring 2003 (Z33)</h4>
   <br>
   <p>
@@ -318,7 +318,7 @@
   <h4>Preço: R$ 187.250</h4>
   <hr>
   <br>
-  <img src="../images/NFSUG1_Nissan_SentraSERSpecV_Stock_F.webp" alt="imagem do carro sentra se-r spec v" style="height: 500px; width: 550px;">
+  <img src="../../src/images/NFSUG1_Nissan_SentraSERSpecV_Stock_F.webp" alt="imagem do carro sentra se-r spec v" style="height: 500px; width: 550px;">
   <h4>2003 Nissan Sentra SE-R Spec V (B15)</h4>
   <br>
   <p>
@@ -339,7 +339,117 @@
   <h4>Preço: R$ 107.000</h4>
   <hr>
   <br>
-  <img src="../images/NFSUG1_Volkswagen_GolfGTI_Stock_F.webp" alt="imagem do carro golf gti" style="height: 500px; width: 550px;">
+  <img src="../../src/images/NFSUG1_Nissan_SkylineGT-R_Stock_F.webp" alt="imagem do carro skyline gtr" style="height: 500px; width: 550px;">
+  <h4>Nissan Skyline GT-R V-Spec 1999 (R34)</h4>
+  <br>
+  <p>
+    O Nissan Skyline GT-R V-Spec (R34) de 1999 foi lançado em janeiro de 1999 como sucessor do Nissan Skyline GT-R (R33). 
+  Ele passou por uma reformulação em 2000 e encerrou a produção em 2002.Em comparação com o R33, o R34 tem uma distância entre eixos mais curta e dimensões menores para melhorar a dirigibilidade. 
+  Como todos os outros modelos GT-R posteriores ao R32 de 1989, o R34 é equipado com um motor biturbo de 2,6 litros "RB26DETT" e envia sua potência para todas as rodas.
+  O R34 também era equipado com uma tela LCD de 5,8" no centro do painel, que exibia leituras em tempo real das estatísticas do motor e do veículo, incluindo a pressão do turbocompressor, 
+  bem como as temperaturas do óleo e do líquido de arrefecimento. A opção de Display Multifuncional (MFD) da Nismo podia ser equipada por um custo extra, 
+  que incluía um cronômetro de volta adicional e um aumento na medição da pressão de reforço para 2 bar. O modelo V-Spec (Especificação Victory) estava disponível com mais melhorias de desempenho, 
+  incluindo extensões aerodinâmicas em fibra de carbono, um diferencial de deslizamento limitado ativo na traseira e suspensão mais baixa, porém mais rígida. 
+  Todos os modelos V-Spec ostentavam um emblema específico na traseira. Em 2007, a Nissan lançou o Nissan GT-R , que foi desenvolvido em uma nova plataforma e não mais associado à marca Skyline.
+  </p>
+  <p>
+    O Skyline GT-R apresenta aceleração e velocidade máxima estelares, embora seu bom desempenho em linha reta apresente algumas desvantagens na dirigibilidade em comparação com carros de tração traseira mais leves e ágeis.
+  </p>
+  <p>
+    Motor: 2.6L Twin-Turbo I6 (RB26DETT), 276 cv (206 kW) a 6.800 rpm, 289 lb⋅ft (392 N·m) a 4400 rpm.
+  </p>
+  <p>
+    Velocidade máxima: 155 mph (249 km/h), 0-60 mph: 4,9 segundos, Transmissão: Manual de 6 velocidades, 
+  Peso do meio-fio: 1.560 kg (3.439 libras), Layout: Motor dianteiro, tração nas quatro rodas.
+  </p>
+  <h4>Preço: R$ 428.000</h4>
+  <hr>
+  <br>
+  <img src="../../src/images/NFSUG1_Peugeot_206_Stock_F.webp" alt="imagem do carro 206" style="height: 500px; width: 550px;">
+  <h4>Peugeot 206 GTi 2003 (T1)</h4>
+  <br>
+  <p>
+    O Peugeot 206 GTi (T1) 2003 é um hatchback fabricado pela Peugeot. Ele ostenta o segundo motor mais potente oferecido pela Peugeot para a série 206, atrás do 206 GTi180 com 180 cv.
+  </p>
+  <p>
+    Apresenta aceleração rápida e boa dirigibilidade, equiparando-se a outros carros de entrada. Quando totalmente atualizado, o 206 também se torna capaz de atingir uma alta velocidade máxima.
+  </p>
+  <p>
+    Motor: 2.0L I4 (EW10J4), 136 cv (101 kW) a 6000 rpm, 140 lb⋅ft (190 N·m) a 4100 rpm.
+  </p>
+  <p>
+    Velocidade máxima: 130 mph (209 km/h), 0-60 mph: 8,1 segundos, Transmissão: Manual de 5 velocidades, 
+  Peso do meio-fio: 1.050 kg (2.315 libras), Layout: Motor dianteiro, tração dianteira.
+  </p>
+  <h4>Preço: R$ 48.150</h4>
+  <hr>
+  <br>
+  <img src="../../src/images/NFSUG1_Subaru_Impreza_Stock_F.webp" alt="imagem do carro impreza" style="height: 500px; width: 550px;">
+  <h4>2003 Subaru Impreza 2.5 RS (GDE)</h4>
+  <br>
+  <p>
+    O Subaru Impreza 2.5 RS (GDE) 2003 é um carro compacto com sistema de tração nas quatro rodas.
+  Ele é equipado com um motor boxer de 2,5 L, que tem uma potência de 165 cv.
+  </p>
+  <p>
+    Ele tem um manuseio competitivo, embora sua aceleração seja um pouco decepcionante, mas é capaz de atingir uma velocidade máxima moderadamente alta.
+  </p>
+  <p>
+    Motor: 2,5L F4, 165 cv (123 kW) a 5600 rpmm, 162 lb⋅ft (220 N·m) a 4000 rpm.
+  </p>
+  <p>
+    Velocidade máxima: 110 mph (177 km/h), 0-60 mph: 7,9 segundos, Transmissão: Manual de 5 velocidades, 
+  Peso do meio-fio: 1.281 kg (2.824 libras), Layout: Motor dianteiro, tração nas quatro rodas.
+  </p>
+  <h4>Preço: R$ 53.500</h4>
+  <hr>
+  <br>
+  <img src="../../src/images/NFSUG1_Toyota_Celica_Stock_F.webp" alt="imagem do carro celica" style="height: 500px; width: 550px;">
+  <h4>Toyota Celica GT-S 2003 (T230)</h4>
+  <br>
+  <p>
+    O Toyota Celica GT-S 2003 (T230) é um compacto esportivo fabricado pela Toyota de 1999 a 2006.
+  O modelo GT-S era exclusivo do mercado norte-americano e lançado como um modelo de alto desempenho. Ele vinha com um motor de 1,8 litro com comando de válvulas variável, 
+  codinome 2ZZ-GE, que também foi usado no Lotus Elise. O GT-S cessou a produção em 2005. Os modelos japoneses T230 Celica ainda eram produzidos no ano seguinte.
+  </p>
+  <p>
+    Motor: 1.8L I4 (2ZZ-GE), 189 cv (141 kW) a 7.800 rpm, 130 lb⋅ft (176 N·m) a 6800 rpm.
+  </p>
+  <p>
+    Velocidade máxima: 130 mph (209 km/h), 0-60 mph: 6,8 segundos, Transmissão: Manual de 6 velocidades, 
+  Peso do meio-fio: 1.100 kg (2.425 libras), Layout: Motor dianteiro, tração dianteira.
+  </p>
+  <h4>Preço: R$ 104.325</h4>
+  <hr>
+  <br>
+  <img src="../../src/images/NFSUG1_Toyota_Supra_Stock_F.webp" alt="imagem do carro supra" style="height: 500px; width: 550px;">
+  <h4>Toyota Supra (S2) (A80) 1998</h4>
+  <br>
+  <p>
+    O Toyota Supra (A80) de 1998 é um carro esportivo cupê fabricado pela Toyota para mercados de exportação fora do Japão. A geração A80 é significativamente mais leve que a geração anterior A70, 
+  empregando o uso de alumínio no capô e em alguns componentes da suspensão, bem como uma tampa de tanque de combustível de plástico e um volante de magnésio.
+  Lançado à venda em maio de 1993 como a quarta geração (A80) do Supra, ele era equipado apenas com um motor de seis cilindros em linha de 3,0 litros, 
+  mas era oferecido com aspiração natural (2JZ-GE) ou turbocompressor duplo (2JZ-GTE) e estava disponível com capota rígida ou uma capota targa removível chamada de "Aerotop".
+  Embora naturalmente aspirado, ele é equipado com um sistema de admissão especialmente projetado, associado a um escapamento dividido para reduzir a contrapressão aplicada ao motor, 
+  e foi oferecido apenas com uma caixa de câmbio automática de 4 velocidades na América do Norte. Nos mercados de exportação, foi vendido até agosto de 1999, 
+  embora revisões introduzidas em maio de 1996 tenham criado uma diferenciação entre os modelos " Série 1 " e "Série 2". Os modelos posteriores foram equipados com um número variável de airbags, 
+  diferentes materiais internos, dois medidores adicionais no painel de instrumentos e uma pequena barra na saída de ar do para-choque dianteiro.No mercado doméstico japonês, 
+  ele foi vendido de maio de 1993 a julho de 2002 com indução biturbo para os modelos "GZ", "RZ" ou " RZ-S " e sem para os modelos "SZ" ou " SZ-R ".
+  </p>
+  <p>
+    Ele tem forte aceleração e alta velocidade máxima, embora tenha algumas desvantagens em seu manuseio.
+  </p>
+  <p>
+    Motor: 3.0L I6 VVT-i (2JZ-GE), 217 cv (162 kW) a 5800 rpm, 210 lb⋅ft (285 N·m) a 4800 rpm.
+  </p>
+  <p>
+    Velocidade máxima: 150 mph (241 km/h), 0-60 mph: 6,8 segundos, Transmissão: Automático de 4 velocidades, 
+  Peso do meio-fio: 1.481 kg (3.265 libras), Layout: Motor dianteiro, tração traseira.
+  </p>
+  <h4>Preço: R$ 120.375</h4>
+  <hr>
+  <br>
+  <img src="../../src/images/NFSUG1_Volkswagen_GolfGTI_Stock_F.webp" alt="imagem do carro golf gti" style="height: 500px; width: 550px;">
   <h4>2003 Volkswagen Golf GTI 2.0L (MK4)</h4>
   <br>
   <p>
