--- a/trabalho/index.html
+++ b/trabalho/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="src/images/Icons-Land-Transporter-Car-Left-Red.ico" type="image/x-icon">
   <title>Concessionária Texmex | Carros de Qualidade</title>
   <meta name="description" content="Concessionária Texmex - Os melhores carros com qualidade, confiança e preços acessíveis. Venha conhecer nossas ofertas.">
   <link rel="stylesheet" href="../trabalho/src/css/style.css">
-  <script src="src/js/script.js"></script>
 </head>
 <body>
   <header>
     <nav>
-      <img src="src\images\concessionaria t (3).png" alt=" imagem da concessioraria" style="height: 120px; width: 190px;">
+      <img src="index.html/../src/images/concessionaria t (3).png" alt=" imagem da concessioraria" style="height: 120px; width: 190px;">
       <ul>
-    <li><a href="index.html">Início</a></li>
+    <li><a href="../trabalho/index.html">Início</a></li>
     <li><a href="../trabalho/src/pages/contato.html">Contato</a></li>
     <li><a href="../trabalho/src/pages/carros.html">Carros</a></li>
       </ul>
