--- a/trabalho/src/pages/contato.html
+++ b/trabalho/src/pages/contato.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../../src/images/Icons-Land-Transporter-Car-Left-Red.ico" type="image/x-icon">
     <title>Concessionária Texmex | Carros de Qualidade</title>
     <link rel="stylesheet" href="../../src/css/style.css">
-    <script src="../js/script.js"></script>
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+    <link href="" rel="stylesheet">
 </head>
 <body>
       <header>
     <nav>
-      <img src="../images/concessionaria t (3).png" alt=" imagem da concessioraria" style="height: 120px; width: 190px;">
+      <img src="../../src/images/concessionaria t (3).png" alt=" imagem da concessioraria" style="height: 120px; width: 190px;">
       <ul>
     <li><a href="../../index.html">Início</a></li>
-    <li><a href="contato.html">Contato</a></li>
-    <li><a href="carros.html">Carros</a></li>
+    <li><a href="../../src/pages/contato.html">Contato</a></li>
+    <li><a href="../../src/pages/carros.html">Carros</a></li>
       </ul>
     </nav>
   </header>
@@ -23,17 +25,16 @@
     <h2>Qualidade, Confiança e Preços Acessíveis</h2>
     <p>Na <strong>Texmex</strong>, você encontra os melhores veículos, com garantia e atendimento de excelência.</p>
   </main>
-  <a href="https://www.instagram.com/concessionariasturbo/?igsh=MTVzajZ6Mmt0ZmNzNA%3D%3D#"target="_blank">
-    <img src="../images/Instagram-Logo.png"
-    alt="instagram"
-    width="50">
-  </a>
+  <div class="icons">
+  <ul>
+  <a href="https://www.instagram.com/concessionariasturbo?igsh=MTVzajZ6Mmt0ZmNzNA=="><button class="instagram"><i class='bx bxl-instagram'></i></button></a>
   <br>
-  <a href="https://mail.google.com/mail/u/0/#sent?compose=CllgCJNsLvVZMfFVCzzNbRFMmkngKGNhdqlLCgFDMpQNpVRqQCwRnkMmBJwWMcmCDRrDSLlsdxV">caua03771@gmail.com</a>
+  <a href="https://wa.me/5585999508769" target="_blank"><button class="whatsapp"><i class="bx bxl-whatsapp"></i></button></a>
   <br>
-  <p>Utilizamos apenas WhatsApp:<a href="https://wa.me/5585999508769" target="_blank">(85)9 9950-8769</a></p>
-    <a href="https://mail.google.com/mail/u/0/#sent?compose=CllgCJTNqGCPwckFDKvRgSjHRqktJHTTMnrnGhxhgrZxPJpMNZLvqpXPTcZcvfvTdKlPSMHMqLB" class="letradoemail">entre em contato por email</a>
+  <a href="https://mail.google.com/mail/u/0/#sent?compose=CllgCJTNqGCPwckFDKvRgSjHRqktJHTTMnrnGhxhgrZxPJpMNZLvqpXPTcZcvfvTdKlPSMHMqLB" class="gmail"><button class="gmail"><i class="bx bxl-gmail"></i></button></a>
   <br>
+  </ul>
+  </div>
   <footer>
     &copy; 2025 Concessionária Texmex - Todos os direitos reservados
   </footer>
