--- a/trabalho/index.html
+++ b/trabalho/index.html
@@ -20,12 +20,13 @@
     </nav>
   </header>
 
+
   <main>
     <h1>Bem-vindo à Concessionária Texmex 🚗</h1>
     <h2>Qualidade, Confiança e Preços Acessíveis</h2>
     <p>Na <strong>Texmex</strong>, você encontra os melhores veículos, com garantia e atendimento de excelência.</p>
   </main>
-
+<img class="imagem_principal" src="../trabalho/src/images/concessionaria t 3page.png" alt="imagemprincipal">
   <footer>
     &copy; 2025 Concessionária Texmex - Todos os direitos reservados
   </footer>
