--- a/trabalho/index.html
+++ b/trabalho/index.html
@@ -11,15 +11,15 @@
 <body>
   <header>
     <nav>
-      <img src="index.html/../src/images/concessionaria t (3).png" alt=" imagem da concessioraria" style="height: 120px; width: 190px;">
+      <img class="logo" src="index.html/../src/images/concessionaria t (3).png" alt=" imagem da concessioraria" style="height: 120px; width: 190px;">
       <ul>
     <li><a href="../trabalho/index.html">Início</a></li>
+    <li><a href="../trabalho/src/pages/sobre.html">Sobre</a></li>
     <li><a href="../trabalho/src/pages/contato.html">Contato</a></li>
     <li><a href="../trabalho/src/pages/carros.html">Carros</a></li>
       </ul>
     </nav>
   </header>
-
 
   <main>
     <h1>Bem-vindo à Concessionária Texmex 🚗</h1>
@@ -27,7 +27,26 @@
     <p>Na <strong>Texmex</strong>, você encontra os melhores veículos, com garantia e atendimento de excelência.</p>
   </main>
 <img class="imagem_principal" src="../trabalho/src/images/concessionaria t 3page.png" alt="imagemprincipal">
-  <footer>
+
+      <button id="btn-top" aria-label="Voltar ao topo">↑</button>
+  <script>
+    // botão subir ao topo - comportamento
+    (function(){
+      const btn = document.getElementById('btn-top');
+      if(!btn) return;
+      // mostrar quando rolar 300px
+      window.addEventListener('scroll', () => {
+        if (window.scrollY > 300) btn.classList.add('show');
+        else btn.classList.remove('show');
+      });
+      // rolar suavemente ao topo ao clicar
+      btn.addEventListener('click', () => {
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+      });
+    })();
+  </script>
+  
+<footer>
     &copy; 2025 Concessionária Texmex - Todos os direitos reservados
   </footer>
 </body>
