--- a/trabalho/src/pages/carros.html
+++ b/trabalho/src/pages/carros.html
@@ -10,9 +10,10 @@
 <body>   
       <header>
     <nav>
-      <img src="../../src/images/concessionaria t (3).png" alt=" imagem da concessioraria" style="height: 120px; width: 190px;">
+      <img class="logo" src="../../src/images/concessionaria t (3).png" alt=" imagem da concessioraria">
       <ul>
     <li><a href="../../index.html">Início</a></li>
+    <li><a href="../../src/pages/sobre.html">Sobre</a></li>
     <li><a href="../../src/pages/contato.html">Contato</a></li>
     <li><a href="../../src/pages/carros.html">Carros</a></li>
       </ul>
@@ -24,7 +25,7 @@
     <p>Na <strong>Texmex</strong>, você encontra os melhores veículos, com garantia e atendimento de excelência.</p>
   </main>
   <div class="carros">
-  <img src="../../src/images/NFSUG1_Acura_IntegraTypeR_Stock_F.webp" alt="imagem do carro integra type r" style="height: 500px; width: 550px;">
+  <img class="carrinhos" src="../../src/images/NFSUG1_Acura_IntegraTypeR_Stock_F.webp" alt="imagem do carro integra type r">
   <h4>Acura Integra Type R (DC2) 2001</h4>
   <br>
   <p>
@@ -45,7 +46,7 @@
   <h4>Preço: R$ 101.650</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Acura_RSX_Stock_F.webp" alt="imagem do carro rsx" style="height: 500px; width: 550px;">
+  <img class="carrinhos" src="../../src/images/NFSUG1_Acura_RSX_Stock_F.webp" alt="imagem do carro rsx">
   <h4>Acura RSX Tipo-S 2003 (DC5)</h4>
   <br>
   <p>
@@ -64,10 +65,11 @@
     Velocidade máxima: 145 mph (233 km/h), 0-60 mph: 6,5 segundos, Transmissão: Manual de 6 velocidades, 
   Peso do meio-fio: 1.255 kg (2.767 libras), Layout: Motor dianteiro, tração dianteira.
   </p>
+  
   <h4>Preço: R$ 101.650</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Dodge_Neon_Stock_F.webp" alt="imagem do carro neon" style="height: 500px; width: 550px;">
+  <img class="carrinhos" src="../../src/images/NFSUG1_Dodge_Neon_Stock_F.webp" alt="imagem do carro neon">
   <h4>Dodge Neon 2.0i 1999 (1ª Geração)</h4>
   <br>
   <p>
@@ -87,7 +89,7 @@
   <h4>Preço: R$ 42.800</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Ford_Focus_Stock_F.webp" alt="imagem do carro focus" style="height: 500px; width: 550px">
+  <img class="carrinhos" src="../../src/images/NFSUG1_Ford_Focus_Stock_F.webp" alt="imagem do carro focus">
   <h4>Ford Focus ZX3 2003 (1ª Geração)</h4>
   <br>
   <p>
@@ -109,7 +111,7 @@
   <h4>Preço: R$ 48.150</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Honda_Civic_Stock_F.webp" alt="imagem do carro civic" style="height: 500px; width: 550px;">
+  <img class="carrinhos" src="../../src/images/NFSUG1_Honda_Civic_Stock_F.webp" alt="imagem do carro civic">
   <h4>Honda Civic Si 2000 (EM1)</h4>
   <br>
   <p>
@@ -131,7 +133,7 @@
   <h4>Preço: R$ 53.500</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Honda_S2000_Stock_F.webp" alt="imagem do carro s2000" style="height: 500px; width: 550px;">
+  <img class="carrinhos" src="../../src/images/NFSUG1_Honda_S2000_Stock_F.webp" alt="imagem do carro s2000">
   <h4>Honda S2000 2003 (AP1)</h4>
   <br>
   <p>
@@ -157,7 +159,7 @@
   <h4>Preço: R$ 149.800</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Hyundai_TiburonGT_Stock_F.webp" alt="imagem do carro tiburon gt" style="height: 500px; width: 550px;">
+  <img class="carrinhos" src="../../src/images/NFSUG1_Hyundai_TiburonGT_Stock_F.webp" alt="imagem do carro tiburon gt">
   <h4>Hyundai Tiburon GT 2003 (GK)</h4>
   <br>
   <p>
@@ -178,7 +180,7 @@
   <h4>Preço: R$ 45.475</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Mazda_MX5_Stock_F.webp" alt="imagem do carro mx5" style="height: 500px; width: 550px;">
+  <img class="carrinhos" src="../../src/images/NFSUG1_Mazda_MX5_Stock_F.webp" alt="imagem do carro mx5">
   <h4>Mazda MX-5 1999 (NB)</h4>
   <br>
   <p>
@@ -201,7 +203,7 @@
   <h4>Preço: R$ 50.825</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Mazda_RX7_Stock_F.webp" alt="imagem do carro rx7" style="height: 500px; width: 550px;">
+  <img class="carrinhos" src="../../src/images/NFSUG1_Mazda_RX7_Stock_F.webp" alt="imagem do carro rx7">
   <h4>Mazda RX-7 (FD3S) 1995 (Série 6)</h4>
   <br>
   <p>
@@ -227,7 +229,7 @@
   <h4>Preço: R$ 160.500</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Mitsubishi_Eclipse_Stock_F.webp" alt="imagem do carro eclipse" style="height: 500px; width: 550px;">
+  <img class="carrinhos" src="../../src/images/NFSUG1_Mitsubishi_Eclipse_Stock_F.webp" alt="imagem do carro eclipse">
   <h4>Mitsubishi Eclipse GSX 1999 (D33A)</h4>
   <br>
   <p>
@@ -256,7 +258,7 @@
   <h4>Preço: R$ 109.675</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Mitsubishi_Lancer_Stock_F.webp" alt="imagem do carro lancer" style="height: 500px; width: 550px;">
+  <img class="carrinhos" src="../../src/images/NFSUG1_Mitsubishi_Lancer_Stock_F.webp" alt="imagem do carro lancer" >
   <h4>Mitsubishi Lancer ES 2003 (CT9A)</h4>
   <br>
   <p>
@@ -275,7 +277,7 @@
   <h4>Preço: R$ 56.175</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Nissan_240SX_Stock_F.webp" alt="imagem do carro 240sx" style="height: 500px; width: 550px;">
+  <img class="carrinhos" src="../../src/images/NFSUG1_Nissan_240SX_Stock_F.webp" alt="imagem do carro 240sx" >
   <h4>Nissan 240SX SE (S13) 1992</h4>
   <br>
   <p>
@@ -297,7 +299,7 @@
   <h4>Preço: R$ 96.300</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Nissan_350Z_Stock_F.webp" alt="imagem do carro 350z" style="height: 500px; width: 550px;">
+  <img class="carrinhos" src="../../src/images/NFSUG1_Nissan_350Z_Stock_F.webp" alt="imagem do carro 350z">
   <h4>Nissan 350Z Touring 2003 (Z33)</h4>
   <br>
   <p>
@@ -318,7 +320,7 @@
   <h4>Preço: R$ 187.250</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Nissan_SentraSERSpecV_Stock_F.webp" alt="imagem do carro sentra se-r spec v" style="height: 500px; width: 550px;">
+  <img class="carrinhos" src="../../src/images/NFSUG1_Nissan_SentraSERSpecV_Stock_F.webp" alt="imagem do carro sentra se-r spec v">
   <h4>2003 Nissan Sentra SE-R Spec V (B15)</h4>
   <br>
   <p>
@@ -339,7 +341,7 @@
   <h4>Preço: R$ 107.000</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Nissan_SkylineGT-R_Stock_F.webp" alt="imagem do carro skyline gtr" style="height: 500px; width: 550px;">
+  <img class="carrinhos" src="../../src/images/NFSUG1_Nissan_SkylineGT-R_Stock_F.webp" alt="imagem do carro skyline gtr">
   <h4>Nissan Skyline GT-R V-Spec 1999 (R34)</h4>
   <br>
   <p>
@@ -365,7 +367,7 @@
   <h4>Preço: R$ 428.000</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Peugeot_206_Stock_F.webp" alt="imagem do carro 206" style="height: 500px; width: 550px;">
+  <img class="carrinhos" src="../../src/images/NFSUG1_Peugeot_206_Stock_F.webp" alt="imagem do carro 206">
   <h4>Peugeot 206 GTi 2003 (T1)</h4>
   <br>
   <p>
@@ -384,7 +386,7 @@
   <h4>Preço: R$ 48.150</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Subaru_Impreza_Stock_F.webp" alt="imagem do carro impreza" style="height: 500px; width: 550px;">
+  <img class="carrinhos" src="../../src/images/NFSUG1_Subaru_Impreza_Stock_F.webp" alt="imagem do carro impreza">
   <h4>2003 Subaru Impreza 2.5 RS (GDE)</h4>
   <br>
   <p>
@@ -404,7 +406,7 @@
   <h4>Preço: R$ 53.500</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Toyota_Celica_Stock_F.webp" alt="imagem do carro celica" style="height: 500px; width: 550px;">
+  <img class="carrinhos" src="../../src/images/NFSUG1_Toyota_Celica_Stock_F.webp" alt="imagem do carro celica">
   <h4>Toyota Celica GT-S 2003 (T230)</h4>
   <br>
   <p>
@@ -422,7 +424,7 @@
   <h4>Preço: R$ 104.325</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Toyota_Supra_Stock_F.webp" alt="imagem do carro supra" style="height: 500px; width: 550px;">
+  <img class="carrinhos" src="../../src/images/NFSUG1_Toyota_Supra_Stock_F.webp" alt="imagem do carro supra">
   <h4>Toyota Supra (S2) (A80) 1998</h4>
   <br>
   <p>
@@ -449,7 +451,7 @@
   <h4>Preço: R$ 120.375</h4>
   <hr>
   <br>
-  <img src="../../src/images/NFSUG1_Volkswagen_GolfGTI_Stock_F.webp" alt="imagem do carro golf gti" style="height: 500px; width: 550px;">
+  <img class="carrinhos" src="../../src/images/NFSUG1_Volkswagen_GolfGTI_Stock_F.webp" alt="imagem do carro golf gti">
   <h4>2003 Volkswagen Golf GTI 2.0L (MK4)</h4>
   <br>
   <p>
@@ -467,6 +469,26 @@
   Layout: Motor dianteiro, tração dianteira.
   </p>
   <h4>Preço: R$ 64.200</h4>
+
+  <button id="btn-top" aria-label="Voltar ao topo">↑</button>
+
+  <script>
+    // botão subir ao topo - comportamento
+    (function(){
+      const btn = document.getElementById('btn-top');
+      if(!btn) return;
+      // mostrar quando rolar 300px
+      window.addEventListener('scroll', () => {
+        if (window.scrollY > 300) btn.classList.add('show');
+        else btn.classList.remove('show');
+      });
+      // rolar suavemente ao topo ao clicar
+      btn.addEventListener('click', () => {
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+      });
+    })();
+  </script>
+  
   </div>
     <footer>
     &copy; 2025 C oncessionária Texmex - Todos os direitos reservados
