--- a/trabalho/src/pages/carros.html
+++ b/trabalho/src/pages/carros.html
@@ -16,6 +16,7 @@
     <li><a href="../../src/pages/sobre.html">Sobre</a></li>
     <li><a href="../../src/pages/contato.html">Contato</a></li>
     <li><a href="../../src/pages/carros.html">Carros</a></li>
+    <li><a href="../../src/pages/login.html">Login</a></li>
       </ul>
     </nav>
   </header>
