--- a/trabalho/index.html
+++ b/trabalho/index.html
@@ -17,6 +17,7 @@
     <li><a href="../trabalho/src/pages/sobre.html">Sobre</a></li>
     <li><a href="../trabalho/src/pages/contato.html">Contato</a></li>
     <li><a href="../trabalho/src/pages/carros.html">Carros</a></li>
+    <li><a href="../trabalho/src/pages/login.html">Login</a></li>
       </ul>
     </nav>
   </header>
