--- a/trabalho/src/pages/contato.html
+++ b/trabalho/src/pages/contato.html
@@ -7,7 +7,6 @@
     <title>Concessionária Texmex | Carros de Qualidade</title>
     <link rel="stylesheet" href="../../src/css/style.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-    <link href="" rel="stylesheet">
 </head>
 <body>
       <header>
@@ -18,6 +17,7 @@
     <li><a href="../../src/pages/sobre.html">Sobre</a></li>
     <li><a href="../../src/pages/contato.html">Contato</a></li>
     <li><a href="../../src/pages/carros.html">Carros</a></li>
+    <li><a href="../../src/pages/login.html">Login</a></li>
       </ul>
     </nav>
   </header>
