--- a/trabalho/src/pages/sobre.html
+++ b/trabalho/src/pages/sobre.html
@@ -16,6 +16,7 @@
         <li><a href="sobre.html">Sobre</a></li>
         <li><a href="contato.html">Contato</a></li>
         <li><a href="carros.html">Carros</a></li>
+        <li><a href="login.html">Login</a></li>
       </ul>
     </nav>
   </header>
