--- a/trabalho/src/pages/form.html
+++ b/trabalho/src/pages/form.html
@@ -1,37 +1,3 @@
-<?php 
-if(isset($_POST['submit']))
-{
-    print_r('Nome Completo: ' . $_POST['nome']);
-    print_r("<br>");
-    print_r('Email: ' . $_POST['email']);
-    print_r("<br>");
-    print_r('Telefone: ' . $_POST['telefone']);
-    print_r("<br>");
-    print_r('Gênero: ' . $_POST['genero']);
-    print_r("<br>");
-    print_r('Data de Nascimento: ' . $_POST['data']);
-    print_r("<br>");
-    print_r('Endereço: ' . $_POST['endereco']);
-    print_r("<br>");
-    print_r('Cidade: ' . $_POST['cidade']);
-    print_r("<br>");
-    print_r('Estado: ' . $_POST['estado']);
-
-    include_once('config.php');
-
-    $nome = $_POST['nome'];
-    $email = $_POST['email'];
-    $telefone = $_POST['telefone'];
-    $genero = $_POST['genero'];
-    $data = $_POST['data']; 
-    $endereco = $_POST['endereco'];
-    $cidade = $_POST['cidade'];
-    $estado = $_POST['estado'];
-
-    $result = mysqli_query($conexao, "INSERT INTO clientes(nome, email, telefone, genero, data_nascimento, endereco, cidade, estado) 
-        VALUES ('$nome', '$email', '$telefone', '$genero', '$data', '$endereco', '$cidade', '$estado')");
-}
-?>
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -51,9 +17,7 @@ if(isset($_POST['submit']))
     </ul>
     </nav>
     </header>
-    <main>
-    <h1>Bem-vindo à Concessionária Texmex 🚗</h1>
-    </main>
+
     <div class="box">
         <form action="">
             <fieldset>
@@ -85,7 +49,7 @@ if(isset($_POST['submit']))
                 <label for="outro">Outro</label>
                 <br><br>
                 <div class="inputBox">
-                    <label for="data" class="labelInput"><b>Data de Nascimento:</b></label>
+                    <label for="data" class="labelInput">Data de Nascimento:</label>
                     <input type="date" name="data" id="data" class="inputUser" required>
                 </div>
                 <br><br>
@@ -108,6 +72,10 @@ if(isset($_POST['submit']))
             </fieldset>
         </form>
     </div>
+     <footer>
+        &copy; 2025 Concessionária Texmex - Todos os direitos reservados
+    </footer>   
     
 </body>
+
 </html>
