--- a/trabalho/src/pages/form.html
+++ b/trabalho/src/pages/form.html
@@ -50,7 +50,7 @@
                 <br><br>
                 <div class="inputBox">
                     <label for="data" class="labelInput">Data de Nascimento:</label>
-                    <input type="date" name="data" id="data" class="inputUser" required>
+                    <br><input type="date" name="data" id="data" class="inputUser" required>
                 </div>
                 <br><br>
                 <div class="inputBox">
